# huhi-core

./: .gitignore  .sonarcloud.properties  .travis.yml  BUILD.gn  DEPS  Jenkinsfile  LICENSE.html  README.md  huhi_paks.gni  huhi_repack_locales.gni  jest.config.js  package-lock.json  package.json  tsconfig-lint.json  tsconfig-webpack.json  tsconfig.json  version.version
android/: BUILD.gn  huhi_java_resources.gni  huhi_java_sources.gni
android/java/: AndroidManifest.xml  apk_for_test.flags  proguard.flags
android/javatests/: AndroidManifest.xml
app/: BUILD.gn  bookmarks_strings.grdp  extensions_strings.grdp  extensions_strings_override.grdp  file_manager_strings.grdp  generated_resources.grd  generated_resources_override.grd  huhi_command_ids.h  huhi_command_line_helper.cc  huhi_command_line_helper.h  huhi_command_line_helper_unittest.cc  huhi_exe.rc  huhi_exe.ver  huhi_generated_resources.grd  huhi_main_delegate.cc  huhi_main_delegate.h  huhi_main_delegate_browsertest.cc  huhi_main_delegate_runtime_flags_browsertest.cc  huhi_strings.grd  huhi_strings_override.grd  media_router_strings.grdp  nearby_share_strings.grdp  nux_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  printing_strings.grdp  profiles_strings.grdp  settings_huhi_strings.grdp  settings_huhi_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  shared_settings_strings_override.grdp  supervised_user_error_page_strings.grdp  vr_strings.grdp  web_time_limit_error_page_strings.grdp  welcome_strings.grdp
app/android/: BUILD.gn
app/linux/: BUILD.gn
app/mac/: BUILD.gn
app/resources/: chromium_strings_af.xtb  chromium_strings_ar.xtb  chromium_strings_az.xtb  chromium_strings_be.xtb  chromium_strings_bg.xtb  chromium_strings_bn.xtb  chromium_strings_bs.xtb  chromium_strings_ca.xtb  chromium_strings_cs.xtb  chromium_strings_da.xtb  chromium_strings_de.xtb  chromium_strings_el.xtb  chromium_strings_en-GB.xtb  chromium_strings_es-419.xtb  chromium_strings_es.xtb  chromium_strings_et.xtb  chromium_strings_eu.xtb  chromium_strings_fa.xtb  chromium_strings_fi.xtb  chromium_strings_fil.xtb  chromium_strings_fr-CA.xtb  chromium_strings_fr.xtb  chromium_strings_gl.xtb  chromium_strings_hi.xtb  chromium_strings_hr.xtb  chromium_strings_hu.xtb  chromium_strings_hy.xtb  chromium_strings_id.xtb  chromium_strings_is.xtb  chromium_strings_it.xtb  chromium_strings_iw.xtb  chromium_strings_kk.xtb  chromium_strings_km.xtb  chromium_strings_kn.xtb  chromium_strings_ky.xtb  chromium_strings_lo.xtb  chromium_strings_lt.xtb  chromium_strings_lv.xtb  chromium_strings_mk.xtb  chromium_strings_ml.xtb  (+136 more)
app/theme/: BUILD.gn  huhi_theme_resources.grd  huhi_unscaled_resources.grd
app/vector_icons/: BUILD.gn  download_unlock.icon  tor_profile.icon  vector_icons.cc.template  vector_icons.h.template
app/win/: BUILD.gn
browser/: BUILD.gn  browser_context_keyed_service_factories.cc  browser_context_keyed_service_factories.h  huhi_browser_main_extra_parts.cc  huhi_browser_main_extra_parts.h  huhi_browser_main_loop.cc  huhi_browser_main_loop.h  huhi_browser_main_parts.cc  huhi_browser_main_parts.h  huhi_browser_main_parts_mac.h  huhi_browser_main_parts_mac.mm  huhi_browser_process_impl.cc  huhi_browser_process_impl.h  huhi_content_browser_client.cc  huhi_content_browser_client.h  huhi_content_browser_client_browsertest.cc  huhi_content_browser_client_unittest.cc  huhi_drm_tab_helper.cc  huhi_drm_tab_helper.h  huhi_first_run_browsertest.cc  huhi_first_run_browsertest.h  huhi_local_state_browsertest.cc  huhi_local_state_prefs.cc  huhi_local_state_prefs.h  huhi_profile_prefs.cc  huhi_profile_prefs.h  huhi_profile_prefs_browsertest.cc  huhi_resources_browsertest.cc  huhi_resources_util_unittest.cc  huhi_scheme_load_browsertest.cc  huhi_stats_updater.cc  huhi_stats_updater.h  huhi_stats_updater_browsertest.cc  huhi_stats_updater_params.cc  huhi_stats_updater_params.h  huhi_stats_updater_unittest.cc  huhi_stats_updater_util.cc  huhi_stats_updater_util.h  huhi_tab_helpers.cc  huhi_tab_helpers.h  (+5 more)
browser/android/: BUILD.gn  huhi_cosmetic_resources_tab_helper.cc  huhi_cosmetic_resources_tab_helper.h  huhi_feature_list.cc  huhi_relaunch_utils.cc  huhi_shields_content_settings.cc  huhi_shields_content_settings.h  huhi_stats_updater_android.cc  huhi_sync_worker.cc  huhi_sync_worker.h
browser/autocomplete/: huhi_autocomplete_scheme_classifier.cc  huhi_autocomplete_scheme_classifier.h
browser/autoplay/: BUILD.gn  autoplay_permission_context.cc  autoplay_permission_context.h  autoplay_permission_context_browsertest.cc  autoplay_permission_context_unittest.cc
browser/binance/: binance_protocol_handler.cc  binance_protocol_handler.h  binance_service_factory.cc  binance_service_factory.h
browser/browsing_data/: BUILD.gn  huhi_browsing_data_remover_delegate.cc  huhi_browsing_data_remover_delegate.h  huhi_browsing_data_remover_delegate_unittest.cc  huhi_clear_browsing_data.cc  huhi_clear_browsing_data.h  huhi_clear_browsing_data_browsertest.cc
common/: BUILD.gn  common_message_generator.cc  common_message_generator.h  huhi_channel_info.cc  huhi_channel_info.h  huhi_channel_info_browsertest.cc  huhi_channel_info_posix.cc  huhi_channel_info_posix.h  huhi_channel_info_unittest.cc  huhi_content_client.cc  huhi_content_client.h  huhi_content_client_unittest.cc  huhi_features.cc  huhi_features.h  huhi_isolated_worlds.h  huhi_paths.cc  huhi_paths.h  huhi_switches.cc  huhi_switches.h  huhi_wallet_constants.h  network_constants.cc  network_constants.h  pref_names.cc  pref_names.h  render_messages.h  resource_bundle_helper.cc  resource_bundle_helper.h  shield_exceptions.cc  shield_exceptions.h  translate_network_constants.cc  translate_network_constants.h  url_constants.cc  url_constants.h  webui_url_constants.cc  webui_url_constants.h
net/: sources.gni
renderer/: BUILD.gn  huhi_content_renderer_client.cc  huhi_content_renderer_client.h  sources.gni
test/: BUILD.gn  testing.gni
utility/: BUILD.gn  huhi_content_utility_client.cc  huhi_content_utility_client.h
(+4209 files in other folders)
