# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.


huhi_locale_source_patterns = [
  "${root_gen_dir}/components/huhi_components_strings_",
  "${root_gen_dir}/huhi/huhi_generated_resources_",
]

huhi_locale_deps = [
  "//huhi/app:huhi_generated_resources_grit",
  "//huhi/components/resources:strings",
]
