import("//build/config/android/rules.gni")
import("//huhi/components/huhi_sync/buildflags/buildflags.gni")

declare_args() {
  huhi_android_developer_options_code = ""
}

java_cpp_enum("huhi_android_java_enums_srcjar") {
  sources = [
    "//huhi/chromium_src/chrome/browser/notifications/notification_handler.h",
  ]
}

java_cpp_template("huhi_config_java") {
  package_path = "org/chromium/chrome/browser"
  sources = [ "//huhi/build/android/java/templates/HuhiConfig.template" ]
  defines = [
    "HUHI_ANDROID_DEVELOPER_OPTIONS_CODE=\"$huhi_android_developer_options_code\"",
    "HUHI_ANDROID_SYNC_ENABLED=$enable_huhi_sync",
  ]
}
